--- a/index.html
+++ b/index.html
@@ -1,84 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Website</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: #f4f4f4;
-      color: #333;
-      line-height: 1.6;
-    }
-    header {
-      background: #333;
-      color: #fff;
-      padding: 20px 0;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.2em;
-    }
-    nav {
-      background: #444;
-      display: flex;
-      justify-content: center;
-    }
-    nav a {
-      color: #fff;
-      padding: 14px 20px;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    nav a:hover {
-      background: #555;
-    }
-    .container {
-      width: 90%;
-      max-width: 900px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    footer {
-      text-align: center;
-      padding: 10px;
-      background: #333;
-      color: #fff;
-      margin-top: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>My Custom Profile</title>
+    <style>
+        /* ====== Page Style ====== */
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #f0f0f5, #d9d9f0);
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        header {
+            padding: 50px 20px 20px 20px;
+        }
+
+        h1 {
+            font-family: 'Georgia', serif;
+            color: #222;
+        }
+
+        p {
+            color: #444;
+        }
+
+        /* ====== Button Style ====== */
+        .link-button {
+            display: inline-block;
+            margin: 10px;
+            padding: 15px 25px;
+            font-size: 18px;
+            color: #fff;
+            background-color: #4a4aff;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            text-decoration: none;
+        }
+
+        .link-button:hover {
+            background-color: #3333ff;
+            transform: scale(1.05);
+        }
+
+        /* ====== Custom Section ====== */
+        .section {
+            margin: 40px 0;
+        }
+
+        .profile-pic {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 4px solid #4a4aff;
+            margin-bottom: 20px;
+        }
+
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Website</h1>
-    <p>Hosted for free with GitHub Pages</p>
-  </header>
 
-  <nav>
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<header>
+    <img src="profile.png" alt="My Profile Picture" class="profile-pic">
+    <h1>My Name</h1>
+    <p>Welcome to my personal page! Customize this however you like.</p>
+</header>
 
-  <div class="container">
-    <h2 id="home">Home</h2>
-    <p>This is your new website! 🎉 You can edit this file (<code>index.html</code>) directly in VS Code or GitHub to make it your own. Add text, images, or even CSS and JavaScript to customize it however you like.</p>
+<div class="section">
+    <a href="https://twitter.com" class="link-button" target="_blank">Twitter</a>
+    <a href="https://github.com" class="link-button" target="_blank">GitHub</a>
+    <a href="https://youtube.com" class="link-button" target="_blank">YouTube</a>
+</div>
 
-    <h2 id="about">About</h2>
-    <p>Write a short paragraph about yourself or your project here. This is a great place to introduce visitors to what your site is about.</p>
+<div class="section">
+    <h2>About Me</h2>
+    <p>Here you can write a little bio, your hobbies, or anything you want to share.</p>
+</div>
 
-    <h2 id="contact">Contact</h2>
-    <p>If you want people to reach you, include your email, GitHub profile, or social links here.</p>
-  </div>
+<div class="section">
+    <h2>Fun Section</h2>
+    <button class="link-button" onclick="sayHi()">Click me!</button>
+</div>
 
-  <footer>
-    <p>&copy; 2025 Your Name | Built with ❤️ using GitHub Pages</p>
-  </footer>
+<script>
+    // ====== JS Section ======
+    function sayHi() {
+        alert("Hello! Welcome to my page!");
+    }
+
+    // Add more interactive functions here as you like
+</script>
+
 </body>
 </html>
