--- a/index.html
+++ b/index.html
@@ -1,280 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<script type="text/javascript" src="canvas.js"></script>
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Michael | Cyber Profile</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-    <style>
-        /* ===== CSS VARIABLES (Lighter Tones) ===== */
-        :root {
-            --primary-color: #938cff; /* Lighter Purple/Blue */
-            --secondary-color: #00ffe6; /* Brighter Cyan */
-            --bg-dark: #0f101a; 
-            --bg-medium: #1a1b2b; 
-            --text-light: #ffffff;
-            --text-muted: #c0c0c0;
-            --shadow-primary: rgba(147, 140, 255, 0.7);
-        }
-
-        /* ===== GLOBAL STYLES & FIXES ===== */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: "Poppins", sans-serif;
-            background: radial-gradient(circle at top, var(--bg-medium) 0%, #0c0d15 100%);
-            color: var(--text-light);
-            text-align: center;
-            overflow-x: hidden;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        header {
-            position: relative;
-            padding: 80px 20px 40px 20px;
-            width: 100%;
-            max-width: 800px;
-            z-index: 10; 
-        }
-
-        /* === FIXED: Header Glow Overlay === */
-        .header-glow-overlay {
-            content: "";
-            position: fixed; 
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 350px;
-            background: linear-gradient(135deg, #938cff, #ff80e5, #00ffee);
-            background-size: 400% 400%;
-            filter: blur(200px); 
-            opacity: 0.3; 
-            z-index: -5; 
-            animation: bgMove 20s ease infinite; 
-        }
-
-        @keyframes bgMove {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        /* ====== Rainbow Text Animation ====== */
-        .rainbow-name {
-            font-size: clamp(2.5em, 5vw, 4em);
-            font-weight: 700;
-            letter-spacing: 3px;
-            margin-top: 15px;
-            background: linear-gradient(270deg, #ff63b8, #ffa533, #ebff3a, #71fff0, #a88aff);
-            background-size: 1500% 1500%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: rainbowShift 12s linear infinite;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
-            line-height: 1.2;
-        }
-
-        @keyframes rainbowShift {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        p {
-            color: var(--text-muted);
-            font-size: 1.1em;
-            margin-top: 10px;
-        }
-
-        /* --- PROFILE PICTURE (FIXED) --- */
-        .profile-pic-wrapper {
-            position: relative;
-            display: inline-block;
-            padding: 6px; 
-            border-radius: 50%;
-            background: linear-gradient(45deg, var(--primary-color), var(--secondary-color));
-            box-shadow: 0 0 35px var(--shadow-primary); 
-        }
-
-        .profile-pic {
-            width: 160px;
-            height: 160px;
-            border-radius: 50%;
-            border: 4px solid var(--bg-medium); 
-            object-fit: cover;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .profile-pic:hover {
-            transform: scale(1.08) rotate(2deg);
-            box-shadow: 0 0 25px var(--secondary-color);
-        }
-
-        /* --- PARTICLE LOGIC --- */
-        .particle-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-            z-index: -4;
-        }
-
-        .particle {
-            position: absolute;
-            width: 4px;
-            height: 4px;
-            background: radial-gradient(circle, var(--secondary-color), transparent);
-            border-radius: 50%;
-            opacity: 0;
-            animation: floatUp linear infinite;
-            filter: blur(1px);
-        }
-
-        @keyframes floatUp {
-            from { transform: translateY(100vh) scale(0.2); opacity: 0; }
-            50% { opacity: 0.6; }
-            to { transform: translateY(-10vh) scale(1); opacity: 0; }
-        }
-
-        /* ===== BUTTONS & SECTIONS ===== */
-        .link-button-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .link-button {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 12px;
-            padding: 16px 35px;
-            font-size: 18px;
-            font-weight: 600;
-            color: var(--text-light);
-            background: linear-gradient(135deg, var(--primary-color), #7a73ff);
-            border: 2px solid var(--primary-color);
-            border-radius: 12px;
-            cursor: pointer;
-            text-decoration: none;
-            box-shadow: 0 0 25px var(--shadow-primary);
-            transition: all 0.3s ease;
-            min-width: 200px;
-        }
-
-        .link-button:hover {
-            transform: translateY(-5px) scale(1.03) rotate(-1deg);
-            box-shadow: 0 0 40px var(--shadow-primary), 0 0 15px var(--secondary-color);
-            background: linear-gradient(135deg, #7a73ff, var(--primary-color));
-        }
-
-        .link-button img {
-            filter: invert(1);
-            transition: transform 0.3s ease;
-        }
-
-        .link-button:hover img {
-            transform: rotate(360deg);
-        }
-
-        .section {
-            margin: 60px 20px;
-            width: 100%;
-            max-width: 600px;
-        }
-
-        .section h2 {
-            font-size: 2.2em;
-            margin-bottom: 25px;
-            color: var(--secondary-color);
-            text-shadow: 0 0 18px rgba(0, 255, 230, 0.6);
-        }
-
-        #gameCanvas {
-            background: #23253a; 
-            border: 3px solid var(--secondary-color);
-            border-radius: 15px;
-            box-shadow: 0 0 35px rgba(0, 255, 230, 0.7);
-            margin-top: 20px;
-            transition: box-shadow 0.5s ease;
-        }
-
-        #gameCanvas:hover {
-            box-shadow: 0 0 60px rgba(0, 255, 230, 0.9);
-        }
-
-        .game-info {
-            color: var(--text-muted);
-            font-style: italic;
-            margin-top: 15px;
-        }
-
-        footer {
-            margin-top: auto;
-            padding-bottom: 30px;
-            font-size: 0.9em;
-            color: #555;
-            width: 100%;
-        }
-
-        @media (max-width: 600px) {
-            .link-button {
-                min-width: 150px;
-                padding: 12px 20px;
-                font-size: 16px;
-            }
-        }
-    </style>
+    <title>pacman online 4a</title>
 </head>
-<body>
-    
-    <div class="header-glow-overlay"></div>
-
+<!-- qui onload my fa in automatica all aprertura le 2 funzioni che servono x disegnare le cose principali-->
+<body onload="disegnaMappa(); stampaPacman(20,20)"> 
     <header>
-        <div class="particle-container"></div>
-        <div class="profile-pic-wrapper">
-            <img src="pfp.jpg" alt="Michael's Profile Picture" class="profile-pic" />
-        </div>
-        <h1 class="rainbow-name">M I C H A E L</h1>
+        <h1>Pacman</h1>
+        <p>Puoi anche usare le freccette! </p>
     </header>
+    <canvas id="lavagna" width="260" height="260" style="border:1px solid #000000;"></canvas> ;
+    <div class="pulsanti">
 
 
-    <div class="section link-button-container">
-        <a href="https://instagram.com/micheleluvsbands" class="link-button" target="_blank" title="My Instagram">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/instagram.svg" alt="Instagram Icon" width="24" height="24">
-            Instagram
-        </a>
+        <input id="su" type="button" onclick="su(20)" value="su">
 
-        <a href="https://discord.com/users/1176966095899459676" class="link-button" target="_blank" title="My Discord Profile">
-            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v11/icons/discord.svg" alt="Discord Icon" width="24" height="24">
-            Discord
-        </a>
+        <input id="giu" type="button" onclick="giu(20)" value="giu">
+
+        <input id="sinistra" type="button" onclick="dx(20)" value="destra">
+
+        <input id="destra" type="button" onclick="sx(20)" value="sinistra">
+
+
     </div>
-
-
-
-    <footer>
-        <p>© 2025 Michael</p>
-    </footer>
-
-    <script>
-        // none
-    </script>
-</body>
-</html>
